--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,3 +1,8 @@
 <h1>Sign Up Below:</h1>
-
+<form method="POST" action="/registrations">
+<p><label>Name: <input type="text" id="name" name="name" /></label><br /></p>
+<p><label>Email: <input type="text" id="email" name="email" /></label><br /></p>
+<p><label>Password: <input type="text" id="password" name="password" /></label><br /></p>
+<button type="submit" id="Sign Up" />Sign Up
+</form>
 
